Fixed compatibility and deprecation issues with new versions adresses #47